[package]
name = "tomahawk"
version = "0.1.0"
authors = ["Jon Haddad <jon@jonhaddad.com>"]

[dependencies]
tokio = "*"
futures = "0.1"
log = "0.3"
env_logger = "0.3"
tokio-proto = "*"
tokio-io = "*"
tokio-service = "*"
clap="*"
serde = "*"
serde_derive = "*"
bincode = "*"
byteorder = "1.0.0"
bytes = "0.4"
uuid = { version = "0.5", features = ["serde", "v4"] }