[package]
name = "tomahawk"
version = "0.1.0"
authors = ["Jon Haddad <jon@jonhaddad.com>"]

[dependencies]
tokio = "*"
futures = "*"
log = "*"
env_logger = "*"
tokio-proto = "*"
tokio-io = "*"
tokio-service = "*"
clap="*"
serde = "*"
serde_derive = "*"
bincode = "*"
byteorder = "*"
bytes = "*"
uuid = { version = "*", features = ["serde", "v4"] }